[package]
name = "rust-cli"
version = "0.1.0"
authors = ["stefano <huzhichao502@gmail.com>"]
edition = "2018"

description = "rust-cli"
homepage = "https://github.com/AmdRyZen/rust-cli.git"
documentation = "https://github.com/AmdRyZen/rust-cli.git"
readme = "README.md"
keywords = ["cli", "command", "futures", "async"]
categories = ["asynchronous", "concurrency"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/AmdRyZen/rust-cli.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
mobc-redis = "0.5.3"
mobc = "0.5.7"
tokio = {version = "0.2.22", features = ["full"]}
dotenv = "0.15.0"
serde = { version = "1.0.71", features = ["derive"] }
num_cpus = "1.13.0"



# release
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
